add color for Never submit!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
              background-color: #FFDDDD;
              color: red; 
          }
+         #task-list tr.never { 
+             background-color: #DDDDDD;
+             color: black; 
+         }
          table {
              width: 60%;
              border: 1px solid black;
