add Enter username

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
              border: 1px solid black;
              margin: 5px 0px;
          }
-         tr.topic {
+         tr.topic th {
              width: 100%;
              font-weight: bold;
+             margin: 5px;
+             border-bottom: 1px solid #F1F1F1;
          }
          tr.level {
              font-style: italic;
@@ -60,7 +62,7 @@
         <header>Abstract Data Typed Lab: Problem list</header>
         <div id="main">
             <label for="user-id">User ID</label>
-            <input type="text" id="user-id" title="Enter a user ID" placeholder="Enter a user ID"/>
+            <input type="text" id="user-id" title="Enter user ID or username" placeholder="Enter user ID or username"/>
         </div>
         <div id="task-list">
         </div>
