--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Abstract Data Typed Lab: Problem List</title>
+        <title>Abstract Data Types Lab: Problem List</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="lib/jquery-1.11.3.min.js"></script>
         <script src="main.js"></script>
