--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Abstract Data Types Lab: Problem List</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="lib/jquery-1.11.3.min.js"></script>
-        <script src="main.js"></script>
+        <script src="src/main.js"></script>
         <style>
          html, body {
              font-family: Verdana,sans-serif;
@@ -76,7 +76,7 @@
         </style>
     </head>
     <body>
-        <header>Abstract Data Typed Lab: Problem list</header>
+        <header>Abstract Data Types Lab: Problem list</header>
         <div id="main">
             <label for="user-id">User ID</label>
             <input type="text" id="user-id" title="Enter user ID or username" placeholder="Enter user ID or username"/>
