--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
     <head>
         <title>Abstract Data Typed Lab: Make problem list</title>
         <script src="lib/jquery-1.11.3.min.js"></script>
-        <script src="make-list.js"></script>
+        <script src="src/make-list.js"></script>
     </head>
     <body>
         <div id="problems-json">
